# 2EmbedPlayer

./: README.md  setup.cfg
src/IMDbPlayer/: __init__.py  __main__.py
src/IMDbPlayer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
