[metadata]
name = IMDbPlayer
version = 1.0.1
author = Eleanor
description = A simple script to play movies and TV shows from IMDb using 2embed
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/HmonsterG/2embedPlayer
project_urls =
    Bug Tracker = https://github.com/HmonsterG/2embedPlayer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts = 
    IMDbPlayer  = IMDbPlayer:main

[options.packages.find]
where = src